fix: some fixes and adding helm chart
