# api/openapi.yaml
@@ -254,6 +254,20 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPValidationError'
+  /health-check:
+    get:
+      tags:
+      - Health
+      summary: Health check
+      description: Returns a 200 status code if the service is up and running
+      operationId: service_health_check
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HealthCheck'
 components:
   schemas:
     ConnectorMetadata:
@@ -402,6 +416,17 @@ components:
           title: Detail
       type: object
       title: HTTPValidationError
+    HealthCheck:
+      properties:
+        status:
+          type: string
+          title: Status
+          examples:
+          - OK
+      type: object
+      required:
+      - status
+      title: HealthCheck
     ValidationError:
       properties:
         loc:
